test/fixtures/type-error/decorators.lys
#[inline]
fun x(): void = {}

#[asd]
fun test(): void = {}

#[export]
fun main(): void = {}

#[export 123]
fun test2(): void = {}

#[export "test"]
fun test3(): void = {}

#[export ""]
fun test4(): void = {}

#[extern "asd" "dsa"]
fun imported(): void = {}



#[extern false 1]
fun imported(): void = {}